# FastAPI_Practice

./: main.py  pyproject.toml  requirements.txt
routers/v1/: __init__.py  items.py  records.py
scripts/: run-api
